# whisper-relay

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  interface_control.c  interface_control.h  main.c
tests/: run_tests  test_example.c
